--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <header class="relative bg-[var(--color-header-bg)] text-white py-16 md:py-24 text-center overflow-hidden rounded-b-3xl shadow-lg">
         <div class="header-bg-animation"></div>
         <div class="relative z-10 px-4">
-            <img src="logo-symbol.jpg" alt="mancan.digital logo" class="mx-auto mb-6 w-24 h-24 rounded-full border-4 border-[var(--color-accent-blue)] shadow-xl" />
+            <img src="logo-symbol.png" alt="mancan.digital logo" class="mx-auto mb-6 w-24 h-24 rounded-full border-4 border-[var(--color-accent-blue)] shadow-xl" />
             <h1 class="text-4xl md:text-6xl font-extrabold mb-3 leading-tight tracking-tight text-[var(--color-accent-blue)]">
                 mancan<span id="typed-text" class="text-[var(--color-accent-purple-light)]"></span><span class="typing-cursor"></span>
             </h1>
