--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     <header class="relative bg-[var(--color-header-bg)] text-white py-20 md:py-32 text-center overflow-hidden rounded-b-3xl shadow-lg">
         <div class="header-bg-animation"></div>
         <div class="relative z-10 px-4">
-            <img src="logo-symbol.png" alt="mancan.digital logo" class="mx-auto mb-6 logo-enhanced" />
+            <img src="logo-symbol.jpg" alt="mancan.digital logo" class="mx-auto mb-6 logo-enhanced" />
             <h1 class="text-4xl md:text-6xl font-extrabold mb-3 leading-tight tracking-tight text-[var(--color-accent-blue)] main-title-text-shadow">
                 mancan<span id="typed-text" class="text-[var(--color-accent-purple-light)]"></span><span class="typing-cursor"></span>
             </h1>
@@ -210,7 +210,6 @@
             </div>
         </div>
     </header>
-
     <main class="container mx-auto px-4 py-16 md:py-28 flex flex-col gap-16">
         <div id="lang-en" class="lang-section">
             <section class="section-animate bg-[var(--color-section-bg)] p-8 md:p-10 rounded-2xl shadow-xl hover:translate-y-[-5px] transition-transform duration-300 ease-in-out">
