--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>mancan.digital - Next-Gen IT Solutions</title>
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="logo-symbol.jpg">
+    <link rel="icon" type="image/x-icon" href="logo-symbol.png">
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts: Outfit -->
@@ -193,7 +193,7 @@
     <header class="relative bg-[var(--color-header-bg)] text-white py-20 md:py-32 text-center overflow-hidden rounded-b-3xl shadow-lg">
         <div class="header-bg-animation"></div>
         <div class="relative z-10 px-4">
-            <img src="logo-symbol.jpg" alt="mancan.digital logo" class="mx-auto mb-6 logo-enhanced" />
+            <img src="logo-symbol.png" alt="mancan.digital logo" class="mx-auto mb-6 logo-enhanced" />
             <h1 class="text-4xl md:text-6xl font-extrabold mb-3 leading-tight tracking-tight text-[var(--color-accent-blue)] main-title-text-shadow">
                 mancan<span id="typed-text" class="text-[var(--color-accent-purple-light)]"></span><span class="typing-cursor"></span>
             </h1>
