--- a/index.html
+++ b/index.html
@@ -1059,17 +1059,14 @@
                     <div class="hero-copy fade-in">
                         <span class="eyebrow">
                             <span class="eyebrow-dot"></span>
-                            <span data-i18n="hero-eyebrow">Technology consulting for modern operators</span>
+                            <span data-i18n="hero-eyebrow">Technology consulting</span>
                         </span>
                         <h1 class="hero-title">
                             <span data-i18n="hero-title-1">Technology consulting that automates operations,</span>
                             <span class="brand-gradient" data-i18n="hero-title-2">builds custom systems, and turns AI into business results.</span>
                         </h1>
                         <p class="hero-sub" data-i18n="hero-desc">
-                            We modernize workflows, connect tools, and deliver software that improves execution.
-                        </p>
-                        <p class="pain-line" data-i18n="hero-pain">
-                            Manual workflows, disconnected tools, slow delivery.
+                            We automate operations, connect systems, and deliver custom software.
                         </p>
 
                         <div class="mt-8 flex flex-col sm:flex-row gap-3">
@@ -1079,8 +1076,7 @@
 
                         <div class="mt-8 chip-row">
                             <span class="hero-chip"><span class="chip-dot"></span><span data-i18n="hero-chip-1">Advisory + execution</span></span>
-                            <span class="hero-chip"><span class="chip-dot"></span><span data-i18n="hero-chip-2">Built for measurable outcomes</span></span>
-                            <span class="hero-chip"><span class="chip-dot"></span><span data-i18n="hero-chip-3">Bilingual delivery EN/PT</span></span>
+                            <span class="hero-chip"><span class="chip-dot"></span><span data-i18n="hero-chip-2">Bilingual delivery EN/PT</span></span>
                         </div>
                     </div>
 
@@ -1430,15 +1426,15 @@
                 'nav-process': 'Process',
                 'nav-why': 'Why Us',
                 'nav-contact': 'Contact',
-                'hero-eyebrow': 'Technology consulting for modern operators',
-                'hero-title-1': 'Technology consulting that automates operations,',
-                'hero-title-2': 'builds custom systems, and turns AI into business results.',
-                'hero-desc': 'We modernize workflows, connect tools, and deliver software that improves execution.',
+                'hero-eyebrow': 'Technology consulting',
+                'hero-title-1': 'Automate operations,',
+                'hero-title-2': 'connect systems, and drive results.',
+                'hero-desc': 'We automate operations, connect systems, and deliver custom software.',
                 'hero-pain': 'Manual workflows, disconnected tools, slow delivery.',
                 'hero-cta-primary': 'Book a Discovery Call',
                 'hero-cta-secondary': 'Explore Capabilities',
                 'hero-chip-1': 'Advisory + execution',
-                'hero-chip-2': 'Built for measurable outcomes',
+                'hero-chip-2': 'Bilingual delivery EN/PT',
                 'hero-chip-3': 'Bilingual delivery EN/PT',
                 'hero-node-1': 'AI',
                 'hero-node-2': 'Automation',
@@ -1545,15 +1541,15 @@
                 'nav-process': 'Processo',
                 'nav-why': 'Diferenciais',
                 'nav-contact': 'Contato',
-                'hero-eyebrow': 'Consultoria de tecnologia para operadores modernos',
-                'hero-title-1': 'Consultoria de tecnologia que automatiza operações,',
-                'hero-title-2': 'constrói sistemas sob medida e transforma IA em resultado de negócio.',
-                'hero-desc': 'Modernizamos fluxos, conectamos ferramentas e entregamos software que melhora a execução.',
+                'hero-eyebrow': 'Consultoria de tecnologia',
+                'hero-title-1': 'Automatize operações,',
+                'hero-title-2': 'conecte sistemas e gere resultado.',
+                'hero-desc': 'Automatizamos operações, conectamos sistemas e entregamos software sob medida.',
                 'hero-pain': 'Fluxos manuais, ferramentas desconectadas, entrega lenta.',
                 'hero-cta-primary': 'Agendar uma discovery call',
                 'hero-cta-secondary': 'Explorar capacidades',
                 'hero-chip-1': 'Consultoria + execução',
-                'hero-chip-2': 'Projetado para resultados mensuráveis',
+                'hero-chip-2': 'Atendimento bilíngue EN/PT',
                 'hero-chip-3': 'Atendimento bilíngue EN/PT',
                 'hero-node-1': 'IA',
                 'hero-node-2': 'Automação',
